Bug 1110871.  Ion-compile JSOP_SYMBOL.  r=jandem